@@ -1,3 +1,10 @@
+2019-01-22  Alex Christensen  <achristensen@webkit.org>
+
+        Fix more builds.
+
+        * SourcesCocoa.txt:
+        * WebKit.xcodeproj/project.pbxproj:
+
 2019-01-22  Michael Catanzaro  <mcatanzaro@igalia.com>
 
         Another build fix after r240292
